<?xml version="1.0"?>
<package format="2">
  <name>foo</name>
  <version>0.0.0</version>
  <description>The foo package</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libopensplice63</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>libopensplice63</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
