<?xml version="1.0"?>
<package format="2">
  <name>std_msgs</name>
  <version>0.0.0</version>
  <description>A package containing standard message interfaces.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
</package>
