<?xml version="1.0"?>
<package format="2">
  <name>userland</name>
  <version>0.0.0</version>
  <description>The userland package</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>ros_middleware_implementation</build_depend>
  <build_depend>simple_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>ros_middleware_implementation</exec_depend>
  <exec_depend>simple_msgs</exec_depend>
</package>
