<?xml version="1.0"?>
<package format="2">
  <name>userland</name>
  <version>0.0.0</version>
  <description>The userland package</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rmw_implementation</build_depend>
  <build_depend>simple_msgs</build_depend>
  <build_depend>userland_msgs</build_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>simple_msgs</exec_depend>
  <exec_depend>userland_msgs</exec_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_cmake_nose</test_depend>
  <test_depend>launch</test_depend>
</package>
